[gd_scene load_steps=4 format=3 uid="uid://dtrlhspqi8era"]

[ext_resource type="Script" path="res://Weapons/Weapons/Laser/laser_bullet.gd" id="1_5274t"]
[ext_resource type="Texture2D" uid="uid://b3ebee2w6psxn" path="res://Art/Weapons/laser_bullet.png" id="2_uom3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btspj"]
size = Vector2(824, 8)

[node name="LaserBullet" type="Area2D" groups=["bullet"]]
script = ExtResource("1_5274t")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(411, -1)
shape = SubResource("RectangleShape2D_btspj")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(399, 1)
rotation = 0.00523599
texture = ExtResource("2_uom3h")

[node name="FadeoutTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FadeoutTimer" to="." method="_on_fadeout_timer_timeout"]
